# universal-marine-radar-app

./: .gitignore  .gitmodules  AGENTS.md  DEVELOPER.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build-jni.yml  ci.yml
.run/: Mayara App.run.xml
app/: build.gradle.kts  debug.keystore  proguard-rules.pro
app/src/androidTest/kotlin/com/marineyachtradar/mayara/ui/smoke/: MainActivitySmokeTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/marineyachtradar/mayara/: MainActivity.kt
app/src/main/kotlin/com/marineyachtradar/mayara/data/api/: RadarApiClient.kt  SignalKStreamClient.kt  SpokeWebSocketClient.kt
app/src/main/kotlin/com/marineyachtradar/mayara/domain/: CapabilitiesMapper.kt  ConnectionManager.kt  RadarInfoHolder.kt  RadarRepository.kt  UnitsPreferences.kt
app/src/main/kotlin/com/marineyachtradar/mayara/jni/: RadarJni.kt
app/src/main/proto/: RadarMessage.proto
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/kotlin/com/marineyachtradar/mayara/data/: MdnsScannerTest.kt  RadarApiClientTest.kt  SpokeWebSocketClientTest.kt
app/src/test/kotlin/com/marineyachtradar/mayara/domain/: CapabilitiesMapperTest.kt  ConnectionManagerTest.kt  RadarInfoHolderTest.kt  RadarRepositoryTest.kt  UnitsPreferencesTest.kt
app/src/test/kotlin/com/marineyachtradar/mayara/integration/: IntegrationControlRoundTripTest.kt  IntegrationEmbeddedModeTest.kt
app/src/test/kotlin/com/marineyachtradar/mayara/performance/: PerformanceBenchmarkTest.kt
development_docs/: agent_instructions.md  application_specification.md  folder_structure.md  github_actions_build_issues.md  phase1_completion.md  phase1_execution_report.md  phase1_summary.md  phase1_validation.md  project_plan.md  testing_plan.md  todo.md
gradle/: libs.versions.toml
mayara-jni/: Cargo.toml
mayara-jni/src/: .gitkeep  lib.rs
scripts/: build_jni.sh  copy_so.sh  update_mayara.sh
(+26 files in other folders)
