[package]
name = "mayara-jni"
version = "0.1.0"
edition = "2021"
description = "JNI bridge that starts mayara-server inside an Android app"
license = "Apache-2.0"

# Produces libradar.so — name must match System.loadLibrary("radar") in RadarJni.kt
[lib]
name = "radar"
crate-type = ["cdylib"]

[dependencies]
# JNI bindings (no default features → no invocation API, which is not needed in a cdylib)
jni = { version = "0.21", default-features = false }

# Async runtime — explicit feature subset only; "full" enables `signal` which is broken on Android
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "macros"] }

# (tokio-graceful-shutdown is used inside mayara::server::start_android, not here directly)

# Logging
log = "0.4"
android_logger = "0.14"

# Error handling
anyhow = "1.0"

# Shared state helpers
once_cell = "1.21"

# CLaP for CLI argument parsing (needed for Cli struct from mayara)
clap = { version = "4", features = ["derive"] }

# Axum is no longer needed directly in the JNI crate — the stub server was removed
# when the full web server was integrated via mayara::server::start_android().
# axum = { version = "0.8", features = ["json", "tokio", "ws"] }
# serde_json = "1.0"

# mayara library from submodule.
# PREREQUISITE: run `git submodule update --init --recursive` first.
# The `emulator` feature enables built-in radar simulation (no hardware needed for testing).
#
# NOTE: Phase-1 integration uses mayara::start_session() directly.
# Full web server integration requires Phase-1b fork changes:
#   – Move src/bin/mayara-server/web.rs into src/lib/server/
#   – Expose mayara::server::start_android(cli, shutdown_rx)
# Until then, run_server() in lib.rs uses a minimal axum stub.
mayara = { path = "../mayara-server", features = ["emulator"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
# Optimise for size on Android (reduces .so download size)
opt-level = "z"
lto = true
codegen-units = 1
strip = true
